4. myapp/3. myapp-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: myapp-ingress
spec:
  rules:
  - host: minikube1.westeurope.cloudapp.azure.com ##paste you hostname here
    http:
      paths:
      - backend:
          serviceName: myapp
          servicePort: 80
  tls:
  - hosts:
    - minikube1.westeurope.cloudapp.azure.com ##paste you hostname here
    secretName: myapp-certificate
